...
    <string name="notification_multiple_parkings_almost_full">Opgelet: een aantal parkings in Gent zijn bijna volzet.</string>
    <string name="delen">share</string>
    <string name="free_parking">Gratis parkeren</string>
    <string name="search_no_results">Geen resultaten</string>
    <string name="results">Resultaten</string>
    <string name="for_searchTerm_x">%1$s voor zoekopdracht:\n\'%2$s\'</string>
    <string name="remove_searchTerm">Verwijder zoekopdracht</string>
    <string name="location">locatie</string>
    <string name="capacity">capaciteit</string>
    <string name="information">Informatie</string>
    <string name="search">zoeken</string>
    <string name="cancel">annuleren</string>
    <string name="temporary_closed">Tijdelijk gesloten</string>
    <string name="closed">Gesloten</string>
    <string name="search_icon">Zoeken icoon</string>
    <string name="open_map_view">kaart weergave openen</string>
    <string name="scroll_to_top">scroll naar bovenaan</string>
    <string name="navigate_back">terug navigeren</string>
    <plurals name="numberOfParkingSpotsAvailable">
        <item quantity="one">nog %1$d plaats</item>
        <item quantity="other">nog %1$d plaatsen</item>
...
