...
                    stringResource(
                        R.string.results,
                    )
                },
                searchTerm,
            ),
            modifier = Modifier.padding(horizontal = dimensionResource(R.dimen.padding_medium)).testTag("searchResult"),
        )
        TextButton(onClick = onReset) {
            Text(
                stringResource(R.string.remove_searchTerm),
            )
        }
...
 * @param studyLocation The study location to display.
 * @param onViewDetail Callback to view the detail of the study location.
 */
@Composable
fun StudyLocationListItem(modifier: Modifier = Modifier, studyLocation: StudyLocation, onViewDetail: () -> Unit) {
    DefaultOverviewListItemCard(
        modifier = modifier.clickable { onViewDetail() }.testTag("studyLocationListItem"),
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .padding(dimensionResource(R.dimen.padding_medium)),
            verticalArrangement = Arrangement.spacedBy(dimensionResource(R.dimen.padding_medium)),
...
