...
            .focusRequester(focusRequester)
            .onGloballyPositioned {
                if (!textFieldLoaded) {
                    focusRequester.requestFocus() // IMPORTANT
                    textFieldLoaded = true // stop cyclic recompositions
                }
            }.testTag("searchBar"),
        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
        keyboardActions = KeyboardActions(onSearch = {
            focusRequester.freeFocus()
            focusManager.clearFocus()
            onClose()
            if (searchTerm.isNotBlank()) {
...
